--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
@@ -8,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Dashboard | GOV.UK Developer Documentation</title>
+    <title>GOV.UK job story document types</title>
 
     <!--[if gt IE 8]><!--><link href="https://docs.publishing.service.gov.uk/stylesheets/screen.css" rel="stylesheet" media="screen" /><!--<![endif]-->
     <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
