--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>GOV.UK job story document types</title>
+    <title>GOV.UK Supertypes</title>
 
     <!--[if gt IE 8]><!--><link href="https://docs.publishing.service.gov.uk/stylesheets/screen.css" rel="stylesheet" media="screen" /><!--<![endif]-->
     <!--[if lte IE 8]><link href="/stylesheets/screen-old-ie.css" rel="stylesheet" media="screen" /><![endif]-->
